Flex wrap issue fixed IE

--- a/resources/sass/pages/_resultsPage.scss
+++ b/resources/sass/pages/_resultsPage.scss
@@ -26,16 +26,7 @@ $col-spacing: 18px;
 
 
     .filter-section {
-        //flex-basis: 85%;
-        //display: flex;
-        //margin-left: -$col-spacing;
-        //margin-right: -$col-spacing;
-
         .filter-section-child {
-            //flex: 0 0 20%;
-            //width: 20%;
-            //padding: 0 $col-spacing;
-
             &:not(:last-child) {
                 border-right: 2px solid #d7d7d7;
             }
@@ -219,17 +210,19 @@ $col-spacing: 18px;
             flex-direction: row;
 
             .result-item-header-section-1 {
-                flex: 1 0 33%;
+                //flex: 0 0 33%;
+                width: 33%;
             }
 
             .result-item-header-section-2 {
-                flex: 1 0 53%;
+                //flex: 0 0 53%;
+                width: 53%;
             }
 
             .result-item-header-section-3 {
-                flex: 1 0 14%;
+                //flex: 0 0 14%;
+                width: 14%;
                 padding: 10px 0 10px 10px;
-                @include pseudo-border($borderGrey);
 
                 .btn-area-lower {
                     border-top: 1px solid #d7d7d7;
@@ -259,15 +252,18 @@ $col-spacing: 18px;
             flex-direction: row;
 
             .result-item-section-1 {
-                flex: 1 0 33%;
+                //flex: 1 0 33%;
+                width: 33%;
             }
 
             .result-item-section-2 {
-                flex: 1 0 53%;
+                //flex: 1 0 53%;
+                width: 53%;
             }
 
             .result-item-section-3 {
-                flex: 1 0 14%;
+                //flex: 1 0 14%;
+                width: 14%;
                 padding: 10px 0 10px 10px;
                 @include pseudo-border($borderGrey);
 
